Arreglado paths relativos

--- a/ProyectoBasico/Projects/Application/Application.vcxproj
+++ b/ProyectoBasico/Projects/Application/Application.vcxproj
@@ -88,26 +88,26 @@
     <OutDir>$(SolutionDir)\bin</OutDir>
     <TargetName>$(ProjectName)_debug</TargetName>
     <IntDir>$(SolutionDir)\inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
-    <IncludePath>U:\hlocal\Proyecto-3\ProyectoBasico\src\Application2\Header Files;U:\hlocal\Proyecto-3\ProyectoBasico\src\Application\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\src\Application2\Header Files;$(SolutionDir)\src\Application\Header Files;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)\bin</OutDir>
     <TargetName>$(ProjectName)_debug</TargetName>
     <IntDir>$(SolutionDir)\inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
-    <IncludePath>U:\hlocal\Proyecto-3\ProyectoBasico\src\Application2\Header Files;U:\hlocal\Proyecto-3\ProyectoBasico\src\Application\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\src\Application2\Header Files;$(SolutionDir)\src\Application\Header Files;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)\bin</OutDir>
     <IntDir>$(SolutionDir)\inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
-    <IncludePath>U:\hlocal\Proyecto-3\ProyectoBasico\src\Application2\Header Files;U:\hlocal\Proyecto-3\ProyectoBasico\src\Application\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\src\Application2\Header Files;$(SolutionDir)\src\Application\Header Files;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)\bin</OutDir>
     <IntDir>$(SolutionDir)\inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
-    <IncludePath>U:\hlocal\Proyecto-3\ProyectoBasico\src\Application2\Header Files;U:\hlocal\Proyecto-3\ProyectoBasico\src\Application\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\src\Application2\Header Files;$(SolutionDir)\src\Application\Header Files;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
