--- a/ProyectoBasico/Projects/Application/Application.vcxproj.filters
+++ b/ProyectoBasico/Projects/Application/Application.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="Convenio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\Application\Header Files\TinyOgre.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Application\Source Files\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\Application\Source Files\Entity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Application\Source Files\TinyOgre.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
