carga de resources que se utilizaran desde fichero y metodo general para crear entidades

--- a/ProyectoBasico/Projects/Application/Application.vcxproj
+++ b/ProyectoBasico/Projects/Application/Application.vcxproj
@@ -19,26 +19,26 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\Application\Header Files\Component.h" />
     <ClInclude Include="..\..\src\Application\Header Files\EasyDefines.h" />
     <ClInclude Include="..\..\src\Application\Header Files\Entity.h" />
+    <ClInclude Include="..\..\src\Application\Header Files\EntityC.h" />
     <ClInclude Include="..\..\src\Application\Header Files\InitOgre.h" />
     <ClInclude Include="..\..\src\Application\Header Files\OgreApp.h" />
+    <ClInclude Include="..\..\src\Application\Header Files\RenderComponent.h" />
     <ClInclude Include="..\..\src\Application\Header Files\RenderUtilities.h" />
-    <ClInclude Include="Component.h" />
     <ClInclude Include="Convenio.h" />
-    <ClInclude Include="EntityC.h" />
-    <ClInclude Include="RenderComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Application\Source Files\Application.cpp" />
+    <ClCompile Include="..\..\src\Application\Source Files\Component.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\EasyDefines.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\Entity.cpp" />
+    <ClCompile Include="..\..\src\Application\Source Files\EntityC.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\InitOgre.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\OgreApp.cpp" />
+    <ClCompile Include="..\..\src\Application\Source Files\RenderComponent.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\RenderUtilities.cpp" />
-    <ClCompile Include="Component.cpp" />
-    <ClCompile Include="EntityC.cpp" />
-    <ClCompile Include="RenderComponent.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
